gccida/g2/dwarf2out_abstract_function
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_abstract_function/src/dwarf2out.c:10610:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_abstract_function/src/dwarf2out.c:10619:35: error: member reference base type 'dw_die_ref' (aka 'struct die_struct *') is not a structure or union
v4 = *( ( _QWORD *)&decl_die_table->die_tag + uid); 
                    ~~~~~~~~~~~~~~^ ~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_abstract_function/src/dwarf2out.c:10635:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_abstract_function/src/dwarf2out.c:10647:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_abstract_function/src/obj/dwarf2out.o] Error 1
